--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="images/logo.svg" alt="APLK - Future Starts Here" class="logo-image">
+                <img src="logo.svg" alt="APLK - Future Starts Here" class="logo-image">
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
@@ -220,7 +220,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section company">
-                <img src="images/logo.svg" alt="APLK Logo" class="footer-logo">
+                <img src="logo.svg" alt="APLK Logo" class="footer-logo">
                 <p>2, Business Avenue, New York</p>
                 <p>07001234567</p>
                 <p>careers@aplk.ng</p>
