--- a/admin/bank-admin.html
+++ b/admin/bank-admin.html
@@ -62,8 +62,19 @@
                     </div>
                     <div class="admin-profile">
                         <span>Admin</span>
-                        <img src="https://via.placeholder.com/40" alt="Admin">
+                        <!-- Inline SVG avatar to avoid external DNS requests to placeholder services -->
+                        <svg width="40" height="40" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img">
+                            <defs>
+                                <linearGradient id="g1" x1="0" x2="1" y1="0" y2="1">
+                                    <stop offset="0%" stop-color="#4a90e2"/>
+                                    <stop offset="100%" stop-color="#0077cc"/>
+                                </linearGradient>
+                            </defs>
+                            <rect width="40" height="40" rx="8" fill="url(#g1)"></rect>
+                            <text x="50%" y="54%" text-anchor="middle" fill="#fff" font-family="Arial, Helvetica, sans-serif" font-size="16" font-weight="700">A</text>
+                        </svg>
                     </div>
+                    <div id="serverInfo" class="server-info">Server: checking…</div>
                 </div>
             </header>
 
