Update Netlify build config with explicit build script

--- a/public/index.html
+++ b/public/index.html
@@ -196,6 +196,7 @@
                     </label>
                 </div>
 
+                <p class="payment-note">Submit your application. No payment is required.</p>
                 <button type="submit" class="submit-application-btn">Submit Application</button>
             </form>
         </div>
@@ -215,7 +216,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3>COMPANY</h3>
-                <span class="footer-logo">APLK</span>
+                <span class="footer-logo-text">APLK</span>
                 <p>2, Business Avenue, New York</p>
                 <p>0700123456</p>
                 <p>careers@aplk.ng</p>
@@ -248,6 +249,6 @@
         </div>
     </footer>
 
-    <script src="../script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
