--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -21,6 +21,7 @@
                 <ul>
                     <li><a href="#dashboard" class="nav-link active" data-page="dashboard"><i class="fas fa-chart-line"></i> Dashboard</a></li>
                     <li><a href="#applications" class="nav-link" data-page="applications"><i class="fas fa-file-alt"></i> Applications</a></li>
+                    <li><a href="#register" class="nav-link" data-page="register"><i class="fas fa-clipboard-list"></i> Register</a></li>
                     <li><a href="#payments" class="nav-link" data-page="payments"><i class="fas fa-credit-card"></i> Payments</a></li>
                     <li><a href="#users" class="nav-link" data-page="users"><i class="fas fa-users"></i> Users</a></li>
                     <li><a href="#settings" class="nav-link" data-page="settings"><i class="fas fa-cog"></i> Settings</a></li>
@@ -42,7 +43,7 @@
                 <div class="header-right">
                     <div class="user-info">
                         <span id="userName">Admin</span>
-                        <img src="https://via.placeholder.com/40" alt="Admin Avatar" class="avatar">
+                        <div class="avatar">A</div>
                     </div>
                 </div>
             </header>
@@ -106,7 +107,7 @@
                 <!-- Applications Page -->
                 <section id="applications-page" class="page">
                     <div class="page-header">
-                        <h3>Job Applications</h3>
+                        <h3>Applications</h3>
                         <div class="page-actions">
                             <input type="text" id="searchApplications" placeholder="Search applications..." class="search-input">
                             <button id="exportApplications" class="btn btn-secondary"><i class="fas fa-download"></i> Export</button>
@@ -121,11 +122,39 @@
                                 <th>Email</th>
                                 <th>Phone</th>
                                 <th>Submitted</th>
-                                <th>Resume</th>
+                                <th>Status</th>
                                 <th>Actions</th>
                             </tr>
                         </thead>
                         <tbody id="applicationsBody">
+                            <!-- Populated by JavaScript -->
+                        </tbody>
+                    </table>
+                </section>
+
+                <!-- Register Page - Users Table -->
+                <section id="register-page" class="page">
+                    <div class="page-header">
+                        <h3>Users</h3>
+                        <div class="page-actions">
+                            <input type="text" id="searchRegister" placeholder="Search users..." class="search-input">
+                            <button id="exportRegister" class="btn btn-secondary"><i class="fas fa-download"></i> Export</button>
+                        </div>
+                    </div>
+                    <table id="registerTable" class="data-table">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Email</th>
+                                <th>Phone</th>
+                                <th>User Type</th>
+                                <th>Organization</th>
+                                <th>Newsletter</th>
+                                <th>Created</th>
+                                <th>Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody id="registersBody">
                             <!-- Populated by JavaScript -->
                         </tbody>
                     </table>
